[package]
name = "server"
version = "0.4.213"
edition = "2021"
build = "src/build.rs"
license = "Apache-2.0"

[features]
default = ["mimalloc"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
disable-mimalloc = []
mimalloc = ["dep:mimalloc"]

[dependencies]
ahash = { version = "0.8.11" }
anyhow = "1.0.96"
async_zip = { version = "0.0.17", features = [
    "tokio",
    "lzma",
    "bzip2",
    "xz",
    "deflate",
    "zstd",
] }
atone = "0.3.7"
axum = "0.8.1"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
bcrypt = "0.17.0"
bincode = "1.3.3"
blake3 = "1.6.0"
bytes = "1.10.0"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
console-subscriber = { version = "0.4.1", optional = true }
dashmap = "6.1.0"
derive_more = "2.0.1"
dotenvy = { version = "0.15.7" }
error_set = { version = "0.8.5", features = ["tracing"] }
figlet-rs = "0.1.5"
figment = { version = "0.10.19", features = ["toml", "env"] }
flume = "0.11.1"
futures = "0.3.31"
human-repr = "1.1.0"
iggy = { path = "../sdk" }
jsonwebtoken = "9.3.1"
mimalloc = { version = "0.1", optional = true }
moka = { version = "0.12.10", features = ["future"] }
nix = { version = "0.29", features = ["fs"] }
openssl = { version = "0.10.71", features = ["vendored"] }
opentelemetry = { version = "0.28.0", features = ["trace", "logs"] }
opentelemetry-appender-tracing = { version = "0.28.1", features = ["log"] }
opentelemetry-otlp = { version = "0.28.0", features = [
    "logs",
    "trace",
    "grpc-tonic",
    "http",
    "http-proto",
    "reqwest-client",
    "tokio",
] }
opentelemetry-semantic-conventions = { version = "0.28.0" }
opentelemetry_sdk = { version = "0.28.0", features = [
    "rt-tokio",
    "logs",
    "trace",
    "tokio",
] }
prometheus-client = "0.23.1"
quinn = { version = "0.11.6" }
rcgen = "0.13.2"
reqwest = { version = "0.12.12", features = [
    "rustls-tls",
    "rustls-tls-no-provider",
] }
ring = "0.17.9"
rust-s3 = { version = "0.35.1", features = ["default"] }
rustls = { version = "0.23.23" }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
serde_with = { version = "3.12.0", features = ["base64", "macros"] }
static-toml = "1.3.0"
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = "0.33.1"
tempfile = "3.17"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.13", features = ["compat"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = [
    "add-extension",
    "cors",
    "trace",
] }
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tracing-opentelemetry = { version = "0.29.0" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
twox-hash = { version = "2.1.0", features = ["xxhash32"] }
ulid = "1.2.0"
uuid = { version = "1.13.2", features = ["v7", "fast-rng", "zerocopy"] }

[dev-dependencies]
mockall = "0.13.1"

[build-dependencies]
figment = { version = "0.10.19", features = ["json", "toml", "env"] }
serde_json = "1.0.139"
vergen-git2 = { version = "1.0.5", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[[bin]]
name = "iggy-server"
path = "src/main.rs"

# This is a workaround for cargo-udeps to ignore these dependencies
# in case if feature 'tokio-console' is enabled.
[package.metadata.cargo-udeps.ignore]
normal = ["tracing-appender"]

[package.metadata.cargo-machete]
ignored = ["rust-s3"]
