[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bytes = "1.4.0"
ringbuffer = "0.13.0"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37"}
tracing-subscriber = {version = "0.3.16"}
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "zerocopy"]}