[package]
name = "streaming"
version = "0.0.1"
edition = "2021"

[dependencies]
iggy = { path = "../iggy" }
async-trait = "0.1.68"
bytes = "1.4.0"
crc32fast = "1.3.2"
futures = "0.3.28"
ringbuffer = "0.13.0"
fastmurmur3 = "0.2.0"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_with = { version = "3.0.0", features = ["base64"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tracing = { version = "0.1.37"}
tracing-subscriber = {version = "0.3.16"}
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "zerocopy"]}
sysinfo = "0.29.5"
