[package]
name = "streaming"
version = "0.0.1"
edition = "2021"

[dependencies]
iggy = { path = "../iggy" }
aes-gcm = "0.10.2"
async-trait = "0.1.68"
bcrypt = "0.15.0"
bytes = "1.4.0"
futures = "0.3.28"
ringbuffer = "0.14.2"
fastmurmur3 = "0.2.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_with = { version = "3.0.0", features = ["base64"] }
serde_json = "1.0.95"
sled = "0.34.7"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "zerocopy"] }
sysinfo = "0.29.5"
