[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-seeder-tool"
path = "src/data-seeder/main.rs"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
iggy = { path = "../sdk" }
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
