[package]
name = "tools"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "data-seeder-tool"
path = "src/data-seeder/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
iggy = { path = "../sdk" }
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
