[package]
name = "iggy-bench-report"
version = "0.2.1"
edition = "2021"
description = "Benchmark report and chart generation library for iggy-bench binary and iggy-benchmarks-dashboard web app"
license = "Apache-2.0"

[dependencies]
byte-unit = "5.1.6"
charming = "0.4.0"
colored = "3.0.0"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
human-repr = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33.1"
tracing = "0.1"
uuid = { version = "1.14.0", features = ["serde"] }
